--- a/mybatispratice/pom.xml
+++ b/mybatispratice/pom.xml
@@ -49,6 +49,13 @@
 			<artifactId>jackson-annotations</artifactId>
 		</dependency>
 
+		<!--分页插件-->
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>1.4.3</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
