解决一直困扰的 mybatis 中SqlSessionFactoryBean属性设置问题

--- a/mybatispratice/src/main/resources/application.yml
+++ b/mybatispratice/src/main/resources/application.yml
@@ -11,4 +11,5 @@ mybatis:
     configuration:
         log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
         map-underscore-to-camel-case: true
-#    type-aliases-package: com.module.mybatispratice.po
+    mapper-locations: classpath*:templates/mappers/*.xml
+    type-aliases-package: com.module.mybatispratice.po
