<新功能>(plugin):mybatis一级缓存和二级缓存   一级缓存就是指在同一事务（sqlsession)相同的查询缓存生效；二级缓存是以mapper为单位的，默认关闭，开启的时候该mapper下的查询缓存在全局共享  <body>
 <footer>

--- a/mybatispratice/src/main/resources/application.yml
+++ b/mybatispratice/src/main/resources/application.yml
@@ -11,5 +11,7 @@ mybatis:
     configuration:
         log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
         map-underscore-to-camel-case: true
+#        local-cache-scope: statement
+        cache-enabled: true
     mapper-locations: classpath*:templates/mappers/*.xml
     type-aliases-package: com.module.mybatispratice.po
