--- a/springpratice/src/main/resources/application.yml
+++ b/springpratice/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 ## 数据库配置 driver-class-name 可以不写，springboot会根据 url中jdbc后面的标识符自动查找
 spring:
     datasource:
-        url: jdbc:mysql://localhost:3306/test?serverTimeZone=UTC
+        url: jdbc:mysql://localhost:3306/test?serverTimezone=UTC
         username: root
         password: root
         driver-class-name: com.mysql.cj.jdbc.Driver
@@ -13,5 +13,5 @@ mybatis:
         map-underscore-to-camel-case: true
 #        local-cache-scope: statement
         cache-enabled: true
-    mapper-locations: classpath*:templates/mappers/*.xml
-    type-aliases-package: com.module.mybatispratice.po
+    mapper-locations: classpath*:templates/mybatis-mappers/*.xml
+    type-aliases-package: com.pratice.entity
